# Eva-brain

./: AGENTS.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: pages.yml  release.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/scripts/: bundle-tools.mjs
apps/desktop/src/: i18n.ts  main.ts  style.css
apps/desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: ingest.rs  main.rs
apps/desktop/test/: tauri-config.test.mjs
docs/: EVA_BRAIN_STANDARD.md  V1_VAULT_CONTRACT.md
marketing/: README.md  graph.js  i18n.js  index.html  modal.js  style.css
schema/: AGENTS.md  CLAUDE.md  EVA.md  eva.json
templates/vault/: index.md  log.md
