[package]
name = "eva-wiki-desktop"
version = "0.1.0"
description = "eva-wiki desktop app"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

[profile.dev]
incremental = true
